mostly functional - rooting out odd bugs here and there

--- a/editor source/SPNATI Character Editor/VersionHistory/v5.10.html
+++ b/editor source/SPNATI Character Editor/VersionHistory/v5.10.html
@@ -27,6 +27,7 @@
 <h3>General</h3>
 <ul>
 	<li>Characters with statuses that are marked to hide under the "Characters to hide" setting will no longer appear as suggestions in the Checklist dashboard, the Banter Wizard, or the Writing Aid.</li>
+	<li>Adjusted the default Blue theme.</li>
 	<li>Desaturated the Mandevilla theme.</li>
 </ul>
 
@@ -58,4 +59,6 @@
 	<li>Fixed invisible tick marks in the Pose Maker in the Mandevilla theme.</li>
 	<li>Dragging a snap will now snap it to the grid as opposed to snapping in grid increments from the initial point.</li>
 	<li>Performance optimizations to the pose maker when there are lots of objects in the timeline.</li>
+	<li>The timeline can now be scrolled using the mousewheel while hovering over a sprite header.</li>
+	<li>Fixed emitter particles not previewing skew values.</li>
 </ul>
