--- a/editor source/SPNATI Character Editor/VersionHistory/v6.0b.html
+++ b/editor source/SPNATI Character Editor/VersionHistory/v6.0b.html
@@ -8,6 +8,7 @@
 <ul>
 	<li>The epilogue editor has received a complete overhaul to make it more similar sequencers found in other software (including the Pose Maker in this software).</li>
 	<li>A tutorial has been added to the spnati_edit YouTube channel.</li>
+	<li>If an emitter's Y scale is left blank, it will now use the same value as the X scale, preserving aspect ratio.</li>
 </ul>
 
 <h3>Pose Maker</h3>
@@ -22,6 +23,7 @@
 <h3>Pose Matrix</h3>
 <ul>
 	<li>Wetness and labia position can now be applied to individual poses across stages.</li>
+	<li>For sheets that were created as "stage-independent", a subfolder can now be specified to store the images in a subfolder of the character's root directory. This is useful for organizing assets for custom poses and epilogues.</li>
 </ul>
 
 <h3>General</h3>
