writing aid enhancement

--- a/editor source/SPNATI Character Editor/VersionHistory/v6.0b.html
+++ b/editor source/SPNATI Character Editor/VersionHistory/v6.0b.html
@@ -26,6 +26,11 @@
 	<li>For sheets that were created as "stage-independent", a subfolder can now be specified to store the images in a subfolder of the character's root directory. This is useful for organizing assets for custom poses and epilogues.</li>
 </ul>
 
+<h3>Writing Aid</h3>
+<ul>
+	<li>Added a "Mark as Done" button to the Writing Aid. This will treat a situation has having already been responded to even if you didn't respond to it previously through the Writing Aid.</li>
+</ul>
+
 <h3>General</h3>
 <ul>
 	<li>Characters with statuses that are marked to hide under the "Characters to hide" setting will no longer appear as suggestions in the Checklist dashboard, the Banter Wizard, or the Writing Aid.</li>
