previous frame fix

--- a/editor source/SPNATI Character Editor/VersionHistory/v6.0b.html
+++ b/editor source/SPNATI Character Editor/VersionHistory/v6.0b.html
@@ -14,6 +14,7 @@
 <ul>
 	<li>The Self > Hidden case condition has been moved to a more prominent, permanent "Background" checkbox next to the custom priority field. The purpose for this change is twofold: to eliminate conflicting terminology with cases that are simply hidden from view in the editor (which has no impact on gameplay), and to make it easier to find this functionality.</li>
 	<li>Add Reset checkboxes to a line's advanced dialogue settings for resetting the character's label and intelligence back to their initial values when played.</li>
+	<li>Added a + when the "to" field on a filter's counter is empty to make it more clear that leaving it empty means "from X and up".</li>
 </ul>
 
 <h3>Epilogues</h3>
@@ -103,4 +104,5 @@ Some common issues you may encounter include, but are not necessarily limited to
 	<li>Fixed emitter particles not previewing skew values.</li>
 	<li>Fixed isuse where renaming a sprite that has children linked to it would break that link.</li>
 	<li>Fixed issue with the stage dropdowns not providing numbers when a filter's role is self or a blank target/opponent.</li>
+	<li>Fixed crash when a stage is filled into a condition that is no longer valid when changing the target. (example: a condition that a character is at stage 10 and then switching to a character with only 5 layers)</li>
 </ul>
