Case templates + safe mode

--- a/editor source/SPNATI Character Editor/Help/help.html
+++ b/editor source/SPNATI Character Editor/Help/help.html
@@ -11,39 +11,40 @@
 <body>
     <nav class="toc">
         <h1>Editor Help</h1>
-        <ul>
-            <li class="topic">General</li>
-            <li class="section" onclick="navigate('./overview.html');">Overview</li>
-            <li class="section" onclick="navigate('./faq.html');">FAQ</li>
-            <li class="topic">Step-by-Step Guide</li>
-            <li class="section" onclick="navigate('./creation.html');">Getting Started</li>
-            <li class="section" onclick="navigate('./metadata.html');">Metadata</li>
-            <li class="section" onclick="navigate('./wardrobe.html');">Wardrobe</li>
-            <li class="section" onclick="navigate('./tags.html');">Tags</li>
-            <li class="section" onclick="navigate('./poses.html');">Importing Poses</li>
-            <li class="section" onclick="navigate('./posemaker.html');">Pose Maker</li>
-            <li class="section" onclick="navigate('./dialogue.html');">Dialogue</li>
-            <li class="section" onclick="navigate('./endings.html');">Endings</li>
-            <li class="section" onclick="navigate('./collectibles.html');">Collectibles</li>
-            <li class="section" onclick="navigate('./advanced.html');">Advanced</li>
-            <li class="topic">Testing</li>
-            <li class="section" onclick="navigate('./validation.html');">Validation</li>
-            <li class="section" onclick="navigate('./listing.html');">Adding to the Game</li>
-            <li class="topic">Tutorials</li>
-            <li class="section" onclick="navigate('./macros.html');">Macros</li>
-            <li class="section" onclick="navigate('./pose_tutorial1.html');">Pose Maker - Frame-by-Frame Animation</li>
-            <li class="section" onclick="navigate('./pose_tutorial2.html');">Pose Maker - Motion Tween Animation</li>
-            <li class="section" onclick="navigate('./pose_tutorial3.html');">Pose Maker - Advanced</li>
-            <li class="section" onclick="navigate('./pose_tutorial4.html');">Pose Maker - Parenting</li>
-            <li class="section" onclick="navigate('./tutorial_template.html');">Templates</li>
-            <li class="section" onclick="navigate('./ending_tutorial1.html');">Epilogues - Basics</li>
-            <li class="section" onclick="navigate('./ending_tutorial2.html');">Epilogues - Animation</li>
-            <li class="section" onclick="navigate('./ending_tutorial3.html');">Epilogues - Fades</li>
-            <li class="section" onclick="navigate('./ending_tutorial4.html');">Epilogues - Particles</li>
-            <li class="topic">Tools</li>
-            <li class="section" onclick="navigate('./line_slicer.html');">Line Slicer</li>
-            <li class="section" onclick="navigate('./data_analyzer.html');">Data Analyzer</li>
-        </ul>
+		<ul>
+			<li class="topic">General</li>
+			<li class="section" onclick="navigate('./overview.html');">Overview</li>
+			<li class="section" onclick="navigate('./faq.html');">FAQ</li>
+			<li class="topic">Step-by-Step Guide</li>
+			<li class="section" onclick="navigate('./creation.html');">Getting Started</li>
+			<li class="section" onclick="navigate('./metadata.html');">Metadata</li>
+			<li class="section" onclick="navigate('./wardrobe.html');">Wardrobe</li>
+			<li class="section" onclick="navigate('./tags.html');">Tags</li>
+			<li class="section" onclick="navigate('./poses.html');">Importing Poses</li>
+			<li class="section" onclick="navigate('./posemaker.html');">Pose Maker</li>
+			<li class="section" onclick="navigate('./dialogue.html');">Dialogue</li>
+			<li class="section" onclick="navigate('./endings.html');">Endings</li>
+			<li class="section" onclick="navigate('./collectibles.html');">Collectibles</li>
+			<li class="section" onclick="navigate('./advanced.html');">Advanced</li>
+			<li class="topic">Testing</li>
+			<li class="section" onclick="navigate('./validation.html');">Validation</li>
+			<li class="section" onclick="navigate('./listing.html');">Adding to the Game</li>
+			<li class="topic">Tutorials</li>
+			<li class="section" onclick="navigate('./macros.html');">Macros</li>
+			<li class="section" onclick="navigate('./casetemplates.html');">Case Templates</li>
+			<li class="section" onclick="navigate('./pose_tutorial1.html');">Pose Maker - Frame-by-Frame Animation</li>
+			<li class="section" onclick="navigate('./pose_tutorial2.html');">Pose Maker - Motion Tween Animation</li>
+			<li class="section" onclick="navigate('./pose_tutorial3.html');">Pose Maker - Advanced</li>
+			<li class="section" onclick="navigate('./pose_tutorial4.html');">Pose Maker - Parenting</li>
+			<li class="section" onclick="navigate('./tutorial_template.html');">Templates</li>
+			<li class="section" onclick="navigate('./ending_tutorial1.html');">Epilogues - Basics</li>
+			<li class="section" onclick="navigate('./ending_tutorial2.html');">Epilogues - Animation</li>
+			<li class="section" onclick="navigate('./ending_tutorial3.html');">Epilogues - Fades</li>
+			<li class="section" onclick="navigate('./ending_tutorial4.html');">Epilogues - Particles</li>
+			<li class="topic">Tools</li>
+			<li class="section" onclick="navigate('./line_slicer.html');">Line Slicer</li>
+			<li class="section" onclick="navigate('./data_analyzer.html');">Data Analyzer</li>
+		</ul>
     </nav>
     <iframe id="mainFrame" src="overview.html">
 
