--- a/editor source/SPNATI Character Editor/VersionHistory/v6.0.html
+++ b/editor source/SPNATI Character Editor/VersionHistory/v6.0.html
@@ -10,6 +10,12 @@
 	<li>Alternate costumes can also have their own gender specified.</li>
 </ul>
 
+<h3>Case Templates</h3>
+<ul>
+	<li>Ever wanted an Opponent Removing Accessory case type? Now you can!</li>
+	<li>Case templates are very similar to macros except they appear as their own category in Case View and in the Add dropdown. See the Case Templates tutorial in the help files or Youtube channel for more details.</li>
+</ul>
+
 <h3>Dialogue</h3>
 <ul>
 	<li>The Self > Hidden case condition has been moved to a more prominent, permanent "Background" checkbox next to the custom priority field. The purpose for this change is twofold: to eliminate conflicting terminology with cases that are simply hidden from view in the editor (which has no impact on gameplay), and to make it easier to find this functionality.</li>
@@ -83,6 +89,12 @@ Some common issues you may encounter include, but are not necessarily limited to
 	<li>Uncountable nouns for clothing like "armor" and "jewelry" are now flagged because they don't pluralize well when writing generic dialogue.</li>
 </ul>
 
+<h3>Safe for Work Mode</h3>
+<ul>
+	<li>A rudimentary "Safe for Work" mode has been added to the general settings. Enabling this hides images, removes some potentially compromising tabs, and replaces references to nudity, masturbation, and so on with more innocuous synonyms.</li>
+	<li>This is intended to help with writing in public settings and not as a setting to use by default.</li>
+</ul>
+
 <h3>Bug Fixes</h3>
 <ul>
 	<li>Fixed crash when closing a character while the Find/Replace popup is open, and then attempting to use the popup.</li>
@@ -105,4 +117,5 @@ Some common issues you may encounter include, but are not necessarily limited to
 	<li>Fixed isuse where renaming a sprite that has children linked to it would break that link.</li>
 	<li>Fixed issue with the stage dropdowns not providing numbers when a filter's role is self or a blank target/opponent.</li>
 	<li>Fixed crash when a stage is filled into a condition that is no longer valid when changing the target. (example: a condition that a character is at stage 10 and then switching to a character with only 5 layers)</li>
+	<li>Fixed issue with Macro lookup appearing blank when adding a case to a macro.</li>
 </ul>
