--- a/editor source/SPNATI Character Editor/VersionHistory/v6.0.html
+++ b/editor source/SPNATI Character Editor/VersionHistory/v6.0.html
@@ -60,6 +60,11 @@ Some common issues you may encounter include, but are not necessarily limited to
 	<li>Poses can now work across stages using stage-specific assets. See this brief tutorial <a href="https://www.youtube.com/watch?v=T7nIUgpGEZo" target="_blank">Cross Stage Poses</a> for how this works.</li>
 </ul>
 
+<h3>Scratch Pad</h3>
+<ul>
+	<li>Added a scratch pad to the Line Importer tab for writing down stream of consciousness. These can later be turned into real cases and assigned conditions.</li>
+</ul>
+
 <h3>Pose Matrix</h3>
 <ul>
 	<li>Wetness and labia position can now be applied to individual poses across stages.</li>
